--- a/1/css/styles.css
+++ b/1/css/styles.css
@@ -25,7 +25,7 @@ footer, header, hgroup, menu, nav, section {
 /*Body
 ---------------------------------------------------------*/
 body {
-	font-family: 'krishna2nd', Arial, Helvetica, sans-serif;
+	font-family: 'Lato', Arial, Helvetica, sans-serif;
 	background-color: #ffffff;
 	font-weight: normal;
 	color: #000000;
