--- a/preact/src/routes/home/style.css
+++ b/preact/src/routes/home/style.css
@@ -1,11 +1,10 @@
 .home {
   margin-left: auto;
   margin-right: auto;
+  padding-top: 2%;
 }
 
 .profilePic {
-  padding: 5%;
-  max-width: 90%;
   height: 400px;
   box-shadow: 0 0 8px 8px #fff inset;
   border-radius: 4px;
@@ -14,4 +13,17 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+}
+
+@media only screen and (max-width: 576px) {
+  .home {
+    padding-top: 0;
+  }
+  .profilePic {
+    padding: 0;
+    max-width: 100%;
+    height: 300px;
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
