--- a/preact/src/style/index.css
+++ b/preact/src/style/index.css
@@ -2,11 +2,11 @@ html, body {
 	height: 100%;
 	width: 100%;
 	padding: 0;
-	padding-top: 20px;
 	margin: 0;
 	background: #FAFAFA;
-	font-family: 'Helvetica Neue', arial, sans-serif;
+	font-family: 'Source Sans Pro',sans-serif;
 	font-weight: 400;
+	font-size: 1em;
 	color: #444;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -15,4 +15,3 @@ html, body {
 * {
 	box-sizing: border-box;
 }
-
