--- a/preact/src/components/menu/style.css
+++ b/preact/src/components/menu/style.css
@@ -8,8 +8,7 @@
   font-size: 32px;
   padding: 16px 16px 32px 32px;
   border-radius: 0% 0% 0% 100%;
-  transition: 1s;
-  cursor: pointer;
+  transition: .8s;
 }
 
 
@@ -17,6 +16,7 @@
     position: fixed;
     top:18px;
     right: 18px;
+    cursor: pointer;
 }
 
 .open {
@@ -24,20 +24,29 @@
 }
 
 .links {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  padding: 25vh 0;
-  justify-content: space-around;
-  top: 100;
+  top: 20%;
+  left: 50px;
+  z-index: 110000;
+  position: fixed;
+  animation: show 1s ease;
+}
 
+@keyframes show {
+  0% { opacity: 0;}
+  60% { opacity: 0.4;}
+  100% { opacity: 1;}
 }
 
 .links a {
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   color: white;
   font-size: 1.5em;
   padding: 10px;
   display: block;
+  cursor: pointer;
+}
+
+.links a:hover {
+  color:yellow;
 }
