--- a/preact/src/assets/components/exp-swiper.css
+++ b/preact/src/assets/components/exp-swiper.css
@@ -12,7 +12,7 @@
   box-shadow: 0 5px 25px 5px rgba(0, 0, 0, 0.2);
 }
 .timeline .swiper-container {
-  height: 600px;
+  height: 100vh;
   width: 100%;
   position: relative;
 }
@@ -31,19 +31,19 @@
   content: '';
   position: absolute;
   z-index: 1;
-  right: -115%;
-  bottom: -10%;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   box-shadow: -230px 0 150px 60vw rgba(0, 0, 0, 0.7);
-  border-radius: 100%;
+
+
 }
 .timeline .swiper-slide-content {
   position: absolute;
   text-align: center;
-  width: 80%;
-  max-width: 310px;
+  width: 100%;
   right: 50%;
   top: 13%;
   -webkit-transform: translate(50%, 0);
@@ -177,7 +177,7 @@
   .timeline .swiper-slide::after {
     right: -30%;
     bottom: -8%;
-    width: 240px;
+    width: 100%;
     height: 50%;
     box-shadow: -230px 0 150px 50vw rgba(0, 0, 0, 0.7);
   }
@@ -186,7 +186,7 @@
     top: 50%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    width: 310px;
+    width: 100%;
     font-size: 11px;
     text-align: right;
   }
@@ -228,7 +228,7 @@
   .timeline .swiper-slide::after {
     right: -20%;
     bottom: -12%;
-    width: 240px;
+    width: 100%;
     height: 50%;
     box-shadow: -230px 0 150px 39vw rgba(0, 0, 0, 0.7);
   }
